--- a/README.Rmd
+++ b/README.Rmd
@@ -53,7 +53,7 @@ Launch R and run these commands to install
 if(!require(httpuv)) install.packages("httpuv")
 if(!require(devtools)) install.packages("devtools")
 
-devtools::install_github("nelson-sci-labs/ShinyLink",dependencies=TRUE)
+devtools::install_github("cdc-addm/ShinyLink",dependencies=TRUE)
 ```
 
 ### Start using ShinyLink
